--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,7 +73,7 @@ import jsmediatags from 'jsmediatags';
         <button class="button" onclick="showUploadSection()">Back</button>
     </div>
 
-    <script>
+    <script defer>
         let currentAudio = null, isMuted = false, isStopped = false;
 
         localforage.config({
